Adding TSyringe, refactoring the code and updating the documentation
